[package]
name = "people-in-space"
version = "0.1.0"
authors = ["TheSpiffiest"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.0", features = ["blocking", "json"] }
tokio = { version = "0.2", features = ["full"] }
requests = "0.0.30"
serde = "1.0.113"
